tests/compile_fail/invalid_custom_property_name_newtype_literal.rs
use surgeist_style::CustomPropertyName;

fn main() {
    let _name = CustomPropertyName("--x".into());
}
