tests/compile_fail/invalid_custom_property_name_newtype_literal.stderr
error[E0423]: expected function, tuple struct or tuple variant, found struct `CustomPropertyName`
 --> tests/compile_fail/invalid_custom_property_name_newtype_literal.rs:4:17
  |
4 |     let _name = CustomPropertyName("--x".into());
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
 ::: src/custom.rs
  |
  | pub struct CustomPropertyName {
  | ----------------------------- `CustomPropertyName` defined here
